fix viewport overflow mobile

--- a/src/components/detailCards/styles.css
+++ b/src/components/detailCards/styles.css
@@ -1,5 +1,5 @@
 .detail-card-container {
-  max-width: 480px;
+  max-width: 420px;
   border-radius: 4rem;
   /* border: 1px solid #90c; */
   background: #fff;
