--- a/src/components/graph/styles.css
+++ b/src/components/graph/styles.css
@@ -3,12 +3,28 @@
   border-radius: 3rem;
   padding: 4rem;
   margin-bottom: 4rem;
+  overflow-x: hidden;
 }
+
+/* media-queries */
+@media screen and (max-width: 655px) {
+  .graph-container {
+    padding: 4rem 1rem;
+  }
+}
+
+/* media-queries */
 
 .graph-header {
   display: flex;
+  flex-wrap: wrap;
+  row-gap: 2rem;
   align-items: center;
   justify-content: space-between;
+}
+
+.graph-header h2 {
+  margin-right: 2rem;
 }
 
 .graph-header .btn-group {
@@ -45,4 +61,9 @@
   gap: 1rem;
   align-items: center;
   margin-bottom: 1rem;
+}
+
+.responsive-graph-container {
+  width: 100%;
+  height: 120px;
 }
