--- a/src/index.css
+++ b/src/index.css
@@ -127,6 +127,7 @@ button:disabled {
   left: 0;
   top: 0;
   height: 100vh;
+  z-index: 99999999;
 }
 
 /*
@@ -158,7 +159,8 @@ button:disabled {
 .details-grid {
   display: grid;
   gap: 3rem;
-  grid-template-columns: repeat(auto-fit, minmax(320px, 1fr));
+  overflow: hidden;
+  grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
 }
 
 /*
